fix visible block

--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -122,3 +122,7 @@ body {
   font-size: 26px;
   text-align: center;
 }
+
+.not-visible {
+  display: none;
+}
